--- a/todo-app/views/todo-list-view.css
+++ b/todo-app/views/todo-list-view.css
@@ -45,6 +45,17 @@ input[type='checkbox'] {
 	height: 20px;
 }
 
+input[type='text'] {
+	width: 100%;
+	height: 24px;
+	border: 0px solid;
+	font-size: 20px;
+}
+
+input[type='text']:focus {
+    outline: 0
+}
+
 .footer div {
 	display: inline;
 }
